# agents-evolution

./: AGENTS-base.md  AGENTS-enhanced.md  AGENTS.md  AUTHOR.md  LICENSE  README.md  diff.patch  install.ps1  install.sh
.agents/skills/agent-scraper-mcp/: .gitignore  DEPLOYMENT_STATUS.md  Dockerfile  LICENSE  README.md  TASK_COMPLETE.md  pyproject.toml  render-create-service.json  test_local.py
.agents/skills/agent-scraper-mcp/src/: __init__.py  main.py
.agents/skills/agent-scraper-mcp/src/middleware/: __init__.py  rate_limit.py  x402.py
.agents/skills/agent-scraper-mcp/src/tools/: __init__.py  scraper.py
.agents/skills/awesome-agent-skills-catalog/: README.md
.agents/skills/codex-cli-permissions-and-session-resume/: SKILL.md
.agents/skills/engineering-principles/: SKILL.md
.agents/skills/explain-complex-code/: SKILL.md
.agents/skills/github-repo-prepare/: SKILL.md
.agents/skills/kirospec-basic/: SKILL.md
.agents/skills/live-runner/: SKILL.md
.agents/skills/logging-helper/: SKILL.md
.agents/skills/outline-vpn-basic/: SKILL.md
.agents/skills/session-recall/: SKILL.md
.agents/skills/spec-mode/: SKILL.md
.agents/skills/subagent-creator-universal/: SKILL.md  master-template.md  troubleshooting.md
.agents/skills/v2raya-linux-basic/: SKILL.md
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  skill-submission.md
skills/.template/: SKILL.md
skills/.template/prompts/: advanced.md  example.md  simple.md
skills/explain-complex-code/prompts/: feynman.md
skills/public-project-setup/: SKILL.md
(+30 files in other folders)
