[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-scraper-mcp"
version = "0.1.0"
description = "Web scraping MCP server for AI agents — screenshots, content extraction, structured scraping"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "mcp[cli]>=0.9.0",
    "orjson>=3.9.0",
    "python-multipart>=0.0.6",
    "playwright>=1.40.0",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "readability-lxml>=0.8.0",
    "lxml>=5.0.0",
    "lxml_html_clean>=0.1.0",
    "html5lib>=1.1",
    "googlesearch-python>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
